syntax = "proto3";

import "google/protobuf/empty.proto";

package user;

option go_package = "/userpb";

message UserBio {
  int64 Id =1;
  string Fname =2;
  string Lname =3;
  string Username =4;
}

message User {
  int64 Id =1;
  string Fname =2;
  string Lname =3;
  string Username =4;
}

message UserPayload {
  UserBio bio = 1;
}

message UserId {
  int64 Id = 1;
}

message Users {
  repeated UserBio users = 1;
}

message Username {
  string username = 1;
}

message Limit {
  int32 limit = 1;
}

service UserService {
  rpc CreateUser (UserPayload) returns (UserBio);
  rpc GetMany (Limit) returns (Users);
  rpc GetById (UserId) returns (UserBio);
  rpc DeleteById (UserId) returns (google.protobuf.Empty);
  rpc Update (UserPayload) returns (google.protobuf.Empty);
}