syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package user;

option go_package = "/userpb";

message User {
  int64 id =1;
  string firstName =2;
  string lastName =3;
  string username =4;
  google.protobuf.Timestamp createdAt = 5; 
}

message UserPayload {
  int64 id = 1;
  string firstName = 2;
  string lastName = 3;
  string username = 4;
}

message UserId {
  int64 Id = 1;
}

message Users {
  repeated User users = 1;
}

message Limit {
  int32 limit = 1;
}

service UserService {
  rpc CreateUser (UserPayload) returns (User);
  rpc GetMany (Limit) returns (Users);
  rpc GetById (UserId) returns (User);
  rpc DeleteById (UserId) returns (google.protobuf.Empty);
  rpc UpdateById (UserPayload) returns (google.protobuf.Empty);
}